various fixes
-fixed calculator sizing issue
-added some styling to calculator table
-added sidebar to calculator
-fixed spelling on sidebar (1RM Calcualtor -> 1RM Calculator) on both calculator page and main page
-tried to fix overuse of divs on 1RM.html but there was too much that caused random styling issues

--- a/calcStyle.css
+++ b/calcStyle.css
@@ -4,8 +4,12 @@ h1 {
 }
 
 p {
-	color: black;
+	color: white;
 	font-size: 20px;
+}
+
+h2 {
+	font-size: 35px;
 }
 
 body {
@@ -28,8 +32,9 @@ label {
 }
 
 input{
-	width: 725px;
-	height: 40px;
+	box-sizing: border-box;
+	width: 90%;
+	height: 2em;
 	font-size: 1em;
 }
 
@@ -41,4 +46,66 @@ h2{
 
 table{
 	margin: auto;
+	margin-top: 1.5em;
 }
+
+td{
+	text-align: center;
+	width: 5em;
+	padding: 0.5em 0;
+	color: white;
+	background-color: black;
+	border: solid 1px darkred;
+}
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidebar a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidebar a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidebar .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  .openbtn {
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #111;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+  }
+  
+  .openbtn:hover {
+    background-color: #444;
+  }
+
+  #main {
+    transition: margin-left .5s;
+    padding: 16px;
+  }
